# noctex

./: Anchor.toml  README.md
app/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/docs/: page.tsx
app/src/app/portfolio/: page.tsx
app/src/components/: ActivityFeed.tsx  LifiSettlement.tsx  Navbar.tsx  OrderBook.tsx  OrderForm.tsx  SettlementFlow.tsx  WalletButton.tsx  WalletProvider.tsx
app/src/lib/: lifi.ts  noctex-client.ts  noctex-idl.json  noctex-types.ts  program.ts
client/: package.json  tsconfig.json
client-rust/: .noctex-dwallet.json  Cargo.toml
client-rust/src/: main.rs
client/src/: check.ts  config.ts  execute-match.ts  finalize-settlement.ts  init-dwallet.ts  init-encrypt-deposit.ts  settle-match.ts  sign-settlement.ts  submit-order.ts  update-dwallet.ts  watch-events.ts
programs/noctex/: Cargo.toml
programs/noctex/src/: dwallet.rs  fhe.rs  lib.rs  order.rs
tests/: noctex.ts
