[package]
name = "noctex-ika-bootstrap"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "noctex-ika-bootstrap"
path = "src/main.rs"

# Empty [workspace] excludes this crate from the parent Anchor workspace,
# so it doesn't conflict with anchor-lang 0.32 deps in programs/noctex/.
[workspace]

[dependencies]
solana-sdk = "2.2"
solana-rpc-client = "2.2"
solana-transaction-status-client-types = "2.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# gRPC client to Ika dWallet network
tonic = { version = "0.14", features = ["tls-native-roots"] }
prost = "0.14"
ika-grpc = { git = "https://github.com/dwallet-labs/ika-pre-alpha" }

# BCS for request/response (signed_request_data, attestation, etc.)
bcs = "0.1"
ika-dwallet-types = { git = "https://github.com/dwallet-labs/ika-pre-alpha" }
